# tasks

./: .pre-commit-config.yaml  delete_nils_from_list.py  gossiping_bus_drivers.py  pyproject.toml  secret_santa.py
leetcode/easy/: anagram.py  balanced-binary-tree.py  binary_search.py  cinema_row.py  guess_number_lower_higher.py  linked_list_cycle.py  longest_palindrome.py  longest_seq_1.py  merge_sorted_lists.py  reverse_linked_list.py  same-tree.py  single-number.py  subsequence_max_sum.py  symmetric-tree.py  two_sum.py  valid-anagram.py  valid-parentheses.py  valid_word.py
leetcode/medium/: 4sum.py  add_two_numbers.py  best-time-to-buy-and-sell-stock-ii.py  container-with-most-water.py  digits_concatenation.py  find-all-anagrams-in-a-string.py  find-minimum-in-rotated-sorted-array.py  group-anagrams.py  housebreaker.py  longest-repeating-character-replacement.py  merge-intervals.py  n_parantheses.py  number-of-islands.py  partition-labels.py  search-in-rotated-sorted-array-ii.py  search_2d_matrix.py  search_rotated_array.py  top-k-frequent-elements.py  top-k-frequent-words.py  zigzag_conversion.py
